@@ -1,3 +1,10 @@
+2011-06-06  Eric Blake  <eblake@redhat.com>
+
+	canonicalize-lgpl: work around AIX realpath bug
+	* m4/canonicalize.m4 (gl_FUNC_REALPATH_WORKS): Expose AIX bug.
+	* doc/posix-functions/realpath.texi (realpath): Document it.
+	Reported by Bruno Haible.
+
 2011-06-06  Bruno Haible  <bruno@clisp.org>
 
 	careadlinkat: Avoid mismatch between ssize_t and int.
